testdata/bad/datePositiveYear.ion
// Timestamp cannot have positive-signed year
+2007-06-04
